--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -15,6 +15,11 @@
                 <a class="btn">Заказать</a>
             </div>
 
+            <div class="intro__animate">
+                <a class="img-anim"></a>
+                <a class="img-anim img-anim_2"></a>
+            </div>
+
         </div>
     </div>
 </div>
