--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -117,6 +118,11 @@ body {
         position: absolute;
         top: 60px;
         left: 60px;
+        animation:showOp2 2s;
+        @keyframes showOp2 {
+            from {opacity: 0;}
+            to {opacity: 1;}
+        }
         &:before {
             content: '';
             position: absolute;
@@ -147,17 +153,34 @@ body {
     }
     &__title {
         color: white;
+        animation:showRight 1s;
+        position: relative;
+        @keyframes showRight {
+        from {right:-100%;}
+        to {right:0;}
+        }
     }
     &__btn {
         color: white;
         display: flex;
         justify-content: center;
         margin-top: 5px;
+        animation:showLeft 1s;
+        position: relative;
+        @keyframes showLeft {
+        from {left:-100%;}
+        to {left:0;}
+        }
     }
     &__animate {
         position: absolute;
         bottom: 10px;
         left: -100px;
+        animation:showOp 3s;
+        @keyframes showOp {
+        from {opacity: 0;}
+        to {opacity: 0.7;}
+        }
     }
 }
 
