--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,9 @@
 @import "./components/animate";
 @import "./components/btn";
 
+@import "./components/backcall-form";
+
 // подключения компонентов страницы
 @import "./components/intro";
+
 
