--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -12,6 +12,19 @@
         width: 100%;
         height: 100%;
         opacity: 0.9;
+        transition: 0.3s ease;
+        animation:showOpas 15s infinite;
+        @keyframes showOpas {
+            0% {
+                opacity: 0.9;
+            }
+            60% {
+                opacity: 0.3;
+            }
+            100% {
+                opacity: 0.9;
+            }
+        }
     }
     &__content {
         padding: 100px 0 100px;
