--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -11,6 +11,10 @@
                 <h1 class="title">Тайники</h1>
             </div>
 
+            <p class="intro__title-info">
+                Изготовление на заказ
+            </p>
+
             <div class="intro__btn">
                 <a class="btn" data-fancybox data-src="#form-backcall">Заказать</a>
             </div>
