--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -50,15 +50,15 @@
             left: 50%;
             transform: translateX(-50%);
         }
-        &:before {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            border-bottom: 2px solid white;
-            width: 100%;
-            height: 1px;
-        }
+        // &:before {
+        //     content: '';
+        //     position: absolute;
+        //     bottom: -10px;
+        //     left: 0;
+        //     border-bottom: 2px solid white;
+        //     width: 100%;
+        //     height: 1px;
+        // }
         a {
             height: 46px;
             width: 89px;
@@ -85,6 +85,22 @@
         @keyframes showRight {
         from {right:-100%;}
         to {right:0;}
+        }
+    }
+    &__title-info {
+        color: white;
+        font-family: 'Exo 2',sans-serif;
+        // font-family: 'Russo One', sans-serif;
+        font-size: 27px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 130%;
+        text-align: center;
+        margin-bottom: 30px;
+        animation:showOp3 2s;
+        @keyframes showOp3 {
+            from {opacity: 0;}
+            to {opacity: 1;}
         }
     }
     &__btn {
