--- a/src/partials/intro.html
+++ b/src/partials/intro.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="form-backcall" id="form-backcall">
-    <form action="mail.php" class="form-backcall__form">
+    <form method="post" action="mail.php" class="form-backcall__form">
         <h2 class="form-backcall__title">Введите ваш телефон:</h2>
         <input name="number" type="tel" class="mask-phone">
         <button type="submit" class="btn btn_form">Отправить</button>
